[11.14] released ...
* A 'Z' command was introduced. It is similar to the 'z' command, but scrolls
  only to header groups that contain at least one new or flagged message. This
  is useful for reading large mailing lists.
* The attachment decoding functions have been rewritten. As a result, nail is
  now able to decrypt and display encrypted parts of multipart messages.
* The handling of read-only compressed mbox format folders was fixed.
* In version 11.12, fcntl() read locking was erroneusly introduced for files
  other than system mailboxes too. It is now disabled for such files again.

[11.13] released 10/27/04
* Backslashes outside a quoted command argument are now handled properly.
* For junk mail detection, the characters '_', '#', '&', and '%' are now
  considered as word constituents. Also the '/' character is kept if it
  occurs between digits, and the ';' character if a '&' was previously
  encountered within the same word.
* For junk mail detection, fields of MIME part headers are now handled like
  fields of the main header.
* For junk mail detection, most HTML tags are now ignored, similar to the
  proposal in Paul Graham's 'Better Bayesian Filtering'. Also, the top and
  bottom probabilities are now adjusted to the number of messages used for
  building the database.
* When the junk mail database is updated, it is now truncated beyond the
  last byte just written. Previously, stale data could have remained after
  this point, which was no problem for nail itself, but could make zcat(1)
  fail on the file.
* In the junk mail database, hashes of 56 bits are now used to represent
  words. A side-effect is that it is possible to test for occurences of
  given words with a higher certainty.
* To take advantage of the changes to the junk mail recognition method,
  you have to delete your junk mail database and have to create it again.
* The new 'probability' command prints the junk statistics for given words.